--- a/products/manuscript/Manuscript.qmd
+++ b/products/manuscript/Manuscript.qmd
@@ -6,9 +6,25 @@ format:
     toc: false
     number-sections: true
     highlight-style: github
+    prefer-html: true  # Only here
 bibliography: ../../assets/dataanalysis-references.bib
 csl: ../../assets/american-journal-of-epidemiology.csl
 ---
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 The structure below is one possible setup for a manuscript, or a general data analysis project (including the course project). Adjust as needed.
 
